footer part updated

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- website title  -->
     <title>Honda | Your Best Rides Partner</title>
     <!-- fav-icon  -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon" />
 
     <!-- Bootstrap Stylesheet -->
     <link rel="stylesheet" href="Css/bootstrap.min.css" />
@@ -144,23 +144,23 @@
     <!-- main section  -->
     <main>
       <!-- featured bike section  -->
-      <section class="container mt-5">
+      <section class="container my-5">
         <div class="fetured text-center">
           <h1 class="text-dark fw-bold">Fetured Bikes 2021</h1>
           <p class="fetured-bike-subtitle fw-bold">Best bike collection</p>
         </div>
         <div class="row fetured-bike">
-          <div class="col-lg-4 col-sm-12 px-5 py-3">
+          <div class="col-lg-4 col-sm-12 px-5 py-3 mt-4">
             <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
           </div>
-          <div class="col-lg-4 col-sm-12 px-5 py-3">
+          <div class="col-lg-4 col-sm-12 px-5 py-3 mt-4">
             <img
               class="img-fluid fetured-bike-without-grayscale"
               src="images/feature-bike.jpg"
               alt=""
             />
           </div>
-          <div class="col-lg-4 col-sm-12 px-5 py-3">
+          <div class="col-lg-4 col-sm-12 px-5 py-3 mt-4">
             <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
           </div>
         </div>
@@ -431,6 +431,12 @@
 
       <!-- Frequently asked section end  -->
     </main>
+
+ 
+     <!-- footer part  -->
+    <footer class="text-center text-muted">
+        &copy; All rise reserved || Honda 2021
+    </footer>
     <!-- Bootstrap Script  -->
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
