--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       <!-- navbar end  -->
 
       <!-- header container  -->
-      <section class="container">
+      <section>
+       <div class="container">
         <div class="row d-flex align-items-center my-5 py-3">
           <div class="col-lg-7 col-sm-12 ">
             <p class="text-white">
@@ -136,6 +137,7 @@
             <img class="img-fluid" src="images/header-bike.png" />
           </div>
         </div>
+       </div>
       </section>
       <!-- header container end  -->
     </header>
@@ -177,7 +179,7 @@
               <div class="card h-100">
                 <img
                   src="images/user-1.png"
-                  class="card-img-top clients-img-1"
+                  class="card-img-top clients-img"
                 />
                 <div class="card-body">
                   <p class="clients-says">
@@ -199,7 +201,7 @@
               <div class="card h-100">
                 <img
                   src="images/user-2.png"
-                  class="card-img-top clients-img-2"
+                  class="card-img-top clients-img"
                 />
                 <div class="card-body">
                   <p class="clients-says">
@@ -220,7 +222,7 @@
               <div class="card h-100">
                 <img
                   src="images/user-3.jpg"
-                  class="card-img-top clients-img-3 mt-5 rounded-circle"
+                  class="card-img-top clients-img  rounded-circle"
                 />
                 <div class="card-body">
                   <p class="clients-says">
@@ -249,14 +251,14 @@
         <h1 class="fw-bold text-center pt-5 mt-5">
           Frequently Asked <span style="color: #e76f51">Questions</span>
         </h1>
-        <div class="row mt-5 pt-5 ms-4">
+        <div class="row mt-5 pt-5  ">
           <div class="col-lg-5 col-sm-12">
             <img class="img-fluid" src="images/faq.png" width="431" />
           </div>
 
           <!-- Frequently asked question start  -->
-          <div class="col-lg-7 my-5  col-sm-12">
-            <div class="accordion mx-2" id="accordionPanelsStayOpenExample">
+          <div class="col-lg-7  col-sm-12 ps-2 mt-4">
+            <div class="accordion " id="accordionPanelsStayOpenExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                   <button
@@ -326,6 +328,7 @@
                   </div>
                 </div>
               </div>
+              <br>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                   <button
@@ -354,6 +357,7 @@
                   </div>
                 </div>
               </div>
+              <br>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                   <button
@@ -386,13 +390,14 @@
                   </div>
                 </div>
               </div>
+              <br>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                   <button
                     class="accordion-button collapsed text-dark fw-bold"
                     type="button"
                     data-bs-toggle="collapse"
-                    data-bs-target="#panelsStayOpen-collapseThree"
+                    data-bs-target="#panelsStayOpen-collapseFour"
                     aria-expanded="false"
                     aria-controls="panelsStayOpen-collapseThree"
                   >
@@ -400,9 +405,9 @@
                   </button>
                 </h2>
                 <div
-                  id="panelsStayOpen-collapseThree"
+                  id="panelsStayOpen-collapseFour"
                   class="accordion-collapse collapse"
-                  aria-labelledby="panelsStayOpen-headingThree"
+                  aria-labelledby="panelsStayOpen-headingFour"
                 >
                   <div class="accordion-body">
                     <strong>When riding, always:</strong>
