--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <!-- header section start  -->
-    <header class="header-bg py-1 ">
+    <header class="header-bg py-1">
       <!-- navbar  -->
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
@@ -69,75 +69,81 @@
 
       <!-- header container  -->
       <section>
-       <div class="container">
-        <div class="row d-flex align-items-center my-5 py-3">
-          <div class="col-lg-7 col-sm-12 ">
-            <p class="text-white">
-              Computer-controlled digital transistorized with electronic advance
-            </p>
-            <h1 class="text-white fw-bold">Honda CBR 300R</h1>
-            <p class="header-honda-subtitle">
-              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-              amet sint. Velit officia consequat duis enim velit mollit.
-              Exercitation veniam consequat sunt nostrud amet.
-            </p>
-            <!-- Button trigger modal -->
-            <button
-              type="button"
-              class="modal-btn border-0 text-white rounded-3"
-              data-bs-toggle="modal"
-              data-bs-target="#exampleModal"
-            >
-              Purchase
-            </button>
+        <div class="container">
+          <div class="row d-flex align-items-center my-5 py-3">
+            <div class="col-lg-7 col-sm-12">
+              <p class="text-white">
+                Computer-controlled digital transistorized with electronic
+                advance
+              </p>
+              <h1 class="text-white fw-bold">Honda CBR 300R</h1>
+              <p class="header-honda-subtitle">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+              <!-- Button trigger modal -->
+              <button
+                type="button"
+                class="modal-btn border-0 text-white rounded-3"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                Purchase
+              </button>
 
-            <!-- Modal -->
-            <div
-              class="modal fade"
-              id="exampleModal"
-              tabindex="-1"
-              aria-labelledby="exampleModalLabel"
-              aria-hidden="true"
-            >
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">
-                      Are you sure to purchase this?
-                    </h5>
-                    <button
-                      type="button"
-                      class="btn-close"
-                      data-bs-dismiss="modal"
-                      aria-label="Close"
-                    ></button>
-                  </div>
-                  <div class="modal-body fw-bold">Confirm Purchase</div>
-                  <div class="ms-auto me-3 my-3">
-                    <button
-                      type="button"
-                      class="btn btn-outline-danger me-3 ps-4 pe-4"
-                      data-bs-dismiss="modal"
-                    >
-                      Cancel
-                    </button>
-                    <button
-                      type="button"
-                      class="btn btn-outline-success text-capitalize ps-4 pe-4"
-                    >
-                      Yes
-                    </button>
+              <!-- Modal -->
+              <div
+                class="modal fade"
+                id="exampleModal"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">
+                        Are you sure to purchase this?
+                      </h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div>
+                    <div class="modal-body fw-bold">Confirm Purchase</div>
+                    <div class="ms-auto me-3 my-3">
+                      <button
+                        type="button"
+                        class="btn btn-outline-danger me-3 ps-4 pe-4"
+                        data-bs-dismiss="modal"
+                      >
+                        Cancel
+                      </button>
+                      <button
+                        type="button"
+                        class="
+                          btn btn-outline-success
+                          text-capitalize
+                          ps-4
+                          pe-4
+                        "
+                      >
+                        Yes
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
+              <!-- modal end -->
             </div>
-            <!-- modal end -->
-          </div>
-          <div class="col-lg-5 col-sm-12 pt-4">
-            <img class="img-fluid" src="images/header-bike.png" />
+            <div class="col-lg-5 col-sm-12 pt-4">
+              <img class="img-fluid" src="images/header-bike.png" />
+            </div>
           </div>
         </div>
-       </div>
       </section>
       <!-- header container end  -->
     </header>
@@ -177,10 +183,7 @@
             <!-- clients  -->
             <div class="col">
               <div class="card h-100">
-                <img
-                  src="images/user-1.png"
-                  class="card-img-top clients-img"
-                />
+                <img src="images/user-1.png" class="card-img-top clients-img" />
                 <div class="card-body">
                   <p class="clients-says">
                     Slate helps you see how many more days you need to work to
@@ -199,10 +202,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img
-                  src="images/user-2.png"
-                  class="card-img-top clients-img"
-                />
+                <img src="images/user-2.png" class="card-img-top clients-img" />
                 <div class="card-body">
                   <p class="clients-says">
                     Slate helps you see how many more days you need to work to
@@ -222,7 +222,7 @@
               <div class="card h-100">
                 <img
                   src="images/user-3.jpg"
-                  class="card-img-top clients-img  rounded-circle"
+                  class="card-img-top clients-img rounded-circle"
                 />
                 <div class="card-body">
                   <p class="clients-says">
@@ -251,14 +251,14 @@
         <h1 class="fw-bold text-center pt-5 mt-5">
           Frequently Asked <span style="color: #e76f51">Questions</span>
         </h1>
-        <div class="row mt-5 pt-5  ">
+        <div class="row mt-5 pt-5">
           <div class="col-lg-5 col-sm-12">
             <img class="img-fluid" src="images/faq.png" width="431" />
           </div>
 
           <!-- Frequently asked question start  -->
-          <div class="col-lg-7  col-sm-12 ps-2 mt-4">
-            <div class="accordion " id="accordionPanelsStayOpenExample">
+          <div class="col-lg-7 col-sm-12 ps-2 mt-4">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                   <button
@@ -328,7 +328,7 @@
                   </div>
                 </div>
               </div>
-              <br>
+              <br />
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                   <button
@@ -357,7 +357,7 @@
                   </div>
                 </div>
               </div>
-              <br>
+              <br />
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                   <button
@@ -390,7 +390,7 @@
                   </div>
                 </div>
               </div>
-              <br>
+              <br />
               <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                   <button
@@ -435,13 +435,105 @@
       </section>
 
       <!-- Frequently asked section end  -->
+
+      <!-- money back guarantee  -->
+      <section class="money-back-section mb-5 py-4">
+        <div class="container text-center pt-3">
+          <div>
+            <img class="img-fluid" src="images/money-back.png" alt="" />
+            <h1 class="fs-2 text-white">100% No-Risk Money-Back Guarantee!</h1>
+            <p class="text-white money-back-subtitle">
+              You are fully protected by our 100% No-Risk Double-Guarantee for
+              new purchases. If you are not satisfied with OceanWP extensions
+              over the next 14 days, we will happily refund 100% of your money.
+              <strong>No questions asked!</strong>
+            </p>
+            <div class="pt-4">
+              <img class="img-fluid" src="images/credit-cards.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- user  review  -->
+      <section class="mb-5">
+        <div class="ps-5 pt-5">
+          <p class="fw-bold">Be the first to review “Honda CBR”</p>
+          <p class="text-muted">
+            Your email address will not be published. Required fields are marked
+            *
+          </p>
+
+          <p>
+            Your Rating
+            <i style="color: gray; font-size: 18px" class="far fa-star"></i>
+            <i style="color: gray; font-size: 18px" class="far fa-star"></i>
+            <i style="color: gray; font-size: 18px" class="far fa-star"></i>
+            <i style="color: gray; font-size: 18px" class="far fa-star"></i>
+            <i style="color: gray; font-size: 18px" class="far fa-star"></i>
+          </p>
+        </div>
+
+        <div class="ps-5">
+          <!-- review section  -->
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">
+                Your Name</label
+              >
+              <input
+                type="name"
+                class="form-control"
+                id="exampleInputName"
+                aria-describedby="nameHelp"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">
+                Your Email</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
+              <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Your Review</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+              ></textarea>
+            </div>
+
+            <div class="mb-3 form-check">
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >Save my name, email, and website in this browser for the next
+                time I comment.</label
+              >
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </section>
     </main>
 
- 
-     <!-- footer part  -->
-    <footer class="text-center text-muted">
-        &copy; All rise reserved || Honda 2021
-    </footer>
+    <!-- footer part  -->
+    <!-- <footer class="text-center text-muted">
+      &copy; All rise reserved || Honda 2021
+    </footer> -->
     <!-- Bootstrap Script  -->
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
