--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
       </section>
 
       <!-- user  review  -->
-      <section class="mb-5">
-        <div class="ps-5 pt-5">
+      <section class="mb-5 pe-5">
+        <div class="ps-5 pt-5 ">
           <p class="fw-bold">Be the first to review “Honda CBR”</p>
           <p class="text-muted">
             Your email address will not be published. Required fields are marked
@@ -531,9 +531,9 @@
     </main>
 
     <!-- footer part  -->
-    <!-- <footer class="text-center text-muted">
+    <footer class="text-center text-muted">
       &copy; All rise reserved || Honda 2021
-    </footer> -->
+    </footer>
     <!-- Bootstrap Script  -->
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
