--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
       </section>
 
       <!-- user  review  -->
-      <section class="mb-5 pe-5">
-        <div class="ps-5 pt-5 ">
+      <section class="mb-5 pe-5 user-review-section">
+        <div class="ps-5 pt-5">
           <p class="fw-bold">Be the first to review “Honda CBR”</p>
           <p class="text-muted">
             Your email address will not be published. Required fields are marked
@@ -476,7 +476,7 @@
 
         <div class="ps-5">
           <!-- review section  -->
-          <form>
+          <form class="review-form">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">
                 Your Name</label
@@ -486,6 +486,7 @@
                 class="form-control"
                 id="exampleInputName"
                 aria-describedby="nameHelp"
+                placeholder="Your Full Name"
               />
             </div>
             <div class="mb-3">
@@ -497,6 +498,7 @@
                 class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
+                placeholder="Your Mail"
               />
               <div id="emailHelp" class="form-text">
                 We'll never share your email with anyone else.
@@ -531,8 +533,29 @@
     </main>
 
     <!-- footer part  -->
-    <footer class="text-center text-muted">
-      &copy; All rise reserved || Honda 2021
+    <footer class="p-5">
+      <div class="footer">
+        <div class="footer-title">
+          <h6>About Honda CRB</h6>
+        </div>
+        <div class="footer-subtitle">
+          <p>
+            honda.crb is #1 motorcycle oriented website in the world where Bike
+            enthusiasts from all over the country can find all the information
+            about any bike. From motorcycle price in Bangladesh and Motorcycle
+            Specification to the test ride reviews of various bikes and first
+            impression reviews of any newly launched bikes. Since 2012, HondaCRB
+            is providing information to everyone across the nation about various
+            offers from the motorcycle or related companies, news, coverage of
+            motorcycle based or related events, and any update on any rules
+            about motorcycle sector in the world.
+          </p>
+        </div>
+      </div>
+
+      <p class="text-muted text-center pt-5">
+        &copy; All rise reserve || Honda CRB 2021
+      </p>
     </footer>
     <!-- Bootstrap Script  -->
     <script src="js/bootstrap.bundle.min.js"></script>
