--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
           <h1 class="text-dark fw-bold">Fetured Bikes 2021</h1>
           <p class="fetured-bike-subtitle fw-bold">Best bike collection</p>
         </div>
+
         <div class="row fetured-bike">
           <div class="col-lg-4 col-sm-12 px-5 py-3 mt-4">
             <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
@@ -213,8 +214,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="far fa-star"></i>
-                  <h6 class="fw-bold clients-name pt-3">Regina Miles</h6>
-                  <h6 class="fw-bold pt-3">Banker</h6>
+                  <h6 class="fw-bold clients-name pt-3">Angela Yu</h6>
+                  <h6 class="fw-bold pt-3">Businessman</h6>
                 </div>
               </div>
             </div>
@@ -234,8 +235,8 @@
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="far fa-star"></i>
-                  <h6 class="fw-bold clients-name pt-3">Regina Miles</h6>
-                  <h6 class="fw-bold pt-3">Banker</h6>
+                  <h6 class="fw-bold clients-name pt-3">Emmi Alie</h6>
+                  <h6 class="fw-bold pt-3">Doctor</h6>
                 </div>
                 <!-- clients end  -->
               </div>
@@ -275,7 +276,7 @@
                 </h2>
                 <div
                   id="panelsStayOpen-collapseOne"
-                  class="accordion-collapse collapse show"
+                  class="accordion-collapse collapse"
                   aria-labelledby="panelsStayOpen-headingOne"
                 >
                   <div class="accordion-body">
