--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
           <div class="col-lg-7 col-sm-12 ps-2 mt-4">
             <div class="accordion" id="accordionPanelsStayOpenExample">
               <div class="accordion-item">
-                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                   <button
-                    class="accordion-button text-dark fw-bold"
+                    class="accordion-button collapsed text-dark fw-bold"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#panelsStayOpen-collapseOne"
-                    aria-expanded="true"
-                    aria-controls="panelsStayOpen-collapseOne"
+                    aria-expanded="false"
+                    aria-controls="panelsStayOpen-collapseTwo"
                   >
                     What are the most important things I should know about
                     riding a bike?
