--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
 
       <!-- Frequently asked section end  -->
 
-      <!-- money back guarantee  -->
+      <!-- money-back guarantee -->
       <section class="money-back-section mb-5 py-4">
         <div class="container text-center pt-3">
           <div>
-            <img class="img-fluid" src="images/money-back.png" alt="" />
+            <img class="img-fluid" src="images/money-back.png" width="210" alt="" />
             <h1 class="fs-2 text-white">100% No-Risk Money-Back Guarantee!</h1>
             <p class="text-white money-back-subtitle">
               You are fully protected by our 100% No-Risk Double-Guarantee for
